--- a/styles.css
+++ b/styles.css
@@ -118,9 +118,8 @@ p {
     display: absolute;
     white-space: nowrap;
     overflow: hidden;
-    border-right: 3px solid white; /* Cursor */
+    border-right: 3px solid white;
     font-size: 50px; 
-    animation: typing 2s steps(9, end) forwards, blink .5s step-end infinite alternate;
 }
 
 @keyframes typing {
