--- a/styles.css
+++ b/styles.css
@@ -28,7 +28,9 @@ body::-webkit-scrollbar {
     z-index: 10;
     font-size: 30px;
 } 
-
+b{
+    font-size: 20px;
+}
 #welcome {
     position: absolute;
     top: 20%;
@@ -43,20 +45,116 @@ body::-webkit-scrollbar {
     height: auto;
     padding-right: 15px;
 }
-
+.grid-container {
+  position: fixed;
+  top:0;
+  left: 50%;
+  transform: translate(-50%, 0);
+  width: 50vw;
+  max-width: 400px;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  padding: 20px;
+  overflow: visible;
+  z-index: 30;
+  opacity: 0;
+  transition: opacity 0.5s ease, visibility 0.5s ease; 
+}
+.grid-item + .grid-item { margin-left: -8px; }
+.grid-container:hover{
+    filter: drop-shadow(5px 10px 5px rgba(255, 0, 0, 0.15));
+}
+.grid-item {
+  height: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: white;
+  font-weight: bold;
+  font-size: 16px;
+  background-color: #282828;
+  opacity: 0.75;
+  transition: transform 0.3s ease, margin 0.3s ease;
+}
+.grid-item:hover{
+    transform: scale(1.1);
+    margin: 0;
+    cursor: pointer;
+    opacity: 0.85;
+}
+.grid-item a {
+  display: block;
+  width: 100%;
+  height: 100%;
+  color: inherit;
+  text-decoration: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.item-1 {
+  clip-path: url(#firstItem);
+}
+.item-2 {
+  clip-path: url(#secondItem);
+}
+.item-3 {
+  clip-path: url(#thirdItem);
+}
 #others {
     position: absolute;
     top: 105%;
     left: 1.5vw;
     z-index: 10;
     text-align: center;
+    display: grid;
+    grid-template-columns: 45% 55%;
+    gap: 0;
     color: white;
     width: 40%;
+    height: 300px;
     font-family: "Rock Salt", cursive;
     font-weight: 400;
     font-style: normal;
 }
-
+#others > div {
+    background: rgba(255, 220, 130, 0.45);
+    box-sizing: border-box;
+    grid-column: 1;
+    clip-path: url(#pic-holder);
+    width: 95%;
+    height: 100 %;
+    padding: 3px;
+    border: 1px double #282828;
+    opacity: 0.85;
+}
+#others > div:hover{
+    background: lightblue;
+    transform: scale(1.03);
+    opacity: 1;
+}
+#others:before {
+    content: "";
+    position: absolute;
+    left: 35%;
+    top:61%;
+    width: 7.5%;
+    height: 41%;
+    background: #282828;
+    opacity: 0.45;
+}
+#others > div > img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover; 
+}
+#others > p {
+    grid-column: 2;
+    margin: 0;
+    font-size: 25px;
+    display: flex;
+    align-items: center;
+}
 #welcome > h2,
 #welcome > h3 {
     margin: 0;
@@ -68,7 +166,7 @@ p {
   font-family: "Space Mono", monospace;
   font-weight: 400;
   font-style: normal;
-  font-size: 20px;
+  font-size: 17px;
   line-height: 30px;
   margin-left: 15px;
 }
@@ -84,7 +182,7 @@ p {
 
 #the-journey {
     position: absolute;
-    top: 180vh;         
+    top: 160vh;         
     left: 50%;
     transform: translateX(-50%);
     text-align: center;
@@ -115,7 +213,6 @@ p {
 
 #typed-text {
     margin-left: 105px;
-    display: absolute;
     white-space: nowrap;
     overflow: hidden;
     border-right: 3px solid white;
@@ -131,9 +228,14 @@ p {
   }
 }
 
-/* Cursor blinking */
 @keyframes blink {
   50% {
     border-color: transparent;
   }
+}
+
+#my-projects {
+    position: absolute;
+    top: 200vh; 
+    height: 150vh;
 }
