--- a/responsive_queries.css
+++ b/responsive_queries.css
@@ -44,7 +44,7 @@
 		width: 155%;
 		margin: 0 auto;
 		left: 50%;
-		transform: translateX(-29%);
+		transform: translateX(-25%);
 	}
 	#projects {
 		top: 235vh;
@@ -56,8 +56,8 @@
     div.project.project1:after,
 	div.project.project2:after,
 	div.project.project3:after {
-	    left: 12%;
-	    font-size: 1.45rem;
+	    left: 10%;
+	    font-size: 1.25rem;
 	}
 	div.project.project2:after{
 	    font-size: 1.325rem;
@@ -267,5 +267,87 @@
     	display: grid;
     	grid-template-rows: 75% 25%;
     	gap: 0.25em;
+	}
+}
+@media (max-width: 480px) and (max-height: 500px) {
+	#others {
+		top: 150vh;
+	}
+	#the-journey,
+	#projects {
+		top: 228vh;
+	}
+	#projects {
+		top: 353vh;
+	}
+	#stack {
+		top: 648%;
+	}
+	#contact-me {
+		top: 693%;
+	}
+}
+@media (max-width: 480px) and (min-height: 501px) and (max-height: 600px) {
+	#others {
+		top: 130vh;
+	}
+	#others:before {
+        height: 40%;
+        top: 60%;
+    }
+	#the-journey,
+	#projects {
+		top: 185vh;
+	}
+	#projects {
+		top: 295vh;
+	}
+	#stack {
+		top: 530vh;
+	}
+	#contact-me {
+		top: 565vh;
+	}
+}
+@media (max-width: 480px) and (min-height: 601px) and (max-height: 700px) {
+	#others {
+		top: 115vh;
+	}
+	#others:before {
+		height: 35%;
+        top: 60%;
+    }
+	#the-journey,
+	#projects {
+		top: 170vh;
+	}
+	#projects {
+		top: 270vh;
+	}
+	#stack {
+		top: 470vh;
+	}
+	#contact-me {
+		top: 500%;
+	}
+}
+@media (max-width: 480px) and (min-height: 701px) and (max-height: 800px) {
+	#others:before {
+		height: 35%;
+        top: 60%;
+    }
+    #the-journey,
+	#projects {
+		top: 150vh;
+	}
+	#projects {
+		top: 230vh;
+	}
+	#stack {
+		top: 405vh;
+		width: 160%;
+	}
+	#contact-me {
+		top: 430%;
 	}
 }
