--- a/responsive_queries.css
+++ b/responsive_queries.css
@@ -163,7 +163,7 @@
 	}
 	#welcome {
 		top: 35%;
-    	left: 85vw;
+    	left: 35vw;
     	width: 60vw;
 	}
 	#welcome > h3 {
@@ -192,7 +192,7 @@
 	    content: "";
 	    position: absolute;
 	    left: 50%;
-	    top: 75%;
+	    top: 70%;
 	    width: 11.5%;
 	    height: 50%;
 	    opacity: 0.45;
@@ -201,26 +201,32 @@
 	#projects {
 		position: absolute;
 		top: 165vh;
-		width: 142%;
+		width: 97%;
 		margin: 0 auto;
 		left: 50%;
-		transform: translateX(-33.5%);
 	}
 	#projects {
-	    top: 215vh;
+	    top: 220vh;
 	}
 	div.project.project1:after,
 	div.project.project2:after,
 	div.project.project3:after {
-		left: 250px;
+		left: 15%;
+		font-size: 1.45rem;
 	}
 	#stack {
 		top: 400%;
-		width: 142%;
+		width: 97%;
 	}
 	#contact-me {
 		top: 427%;
-		width: 142%;
+		width: 97%;
+	}
+	#contact-me > div {
+		display: initial;
+	}
+	#contact-me > div > *{
+		padding-bottom: 16px;
 	}
 	#visible-contact span {
 		display: none;
@@ -892,7 +898,7 @@
 		top: 125vh;
 	}
 	#projects {
-		top: 160vh;
+		top: 165vh;
 	}
 	#stack {
 		top: 275%;
@@ -920,4 +926,113 @@
 	#contact-me {
 		top: 272.75%;
 	}
+}
+
+@media (min-width: 1025px) and (max-width: 1280px) and (max-height: 500px) {
+	#others {
+		top: 125vh;
+	}
+	#others:before {
+		top: 60%;
+        height: 40%;
+    }
+    #the-journey,
+	#projects {
+		top: 190vh;
+	}
+	#projects {
+		top: 270vh;
+	}
+	#stack {
+		top: 540%;
+	}
+	#contact-me {
+		top: 580%;
+	}
+}
+@media (min-width: 1025px) and (max-width: 1280px) 
+	and (min-height: 501px) and (max-height: 600px) {
+		#others:before {
+			top: 60%;
+    	    height: 38.5%;
+    	}
+    	#others {
+			top: 110vh;
+		}
+		#the-journey,
+		#projects {
+			top: 170vh;
+		}
+		#projects {
+			top: 245vh;
+		}
+		#stack {
+			top: 480%;
+		}
+		#contact-me {
+			top: 515%;
+		}
+}
+@media (min-width: 1025px) and (max-width: 1280px) 
+	and (min-height: 601px) and (max-height: 700px) {
+		#stack {
+			top: 415%;
+		}
+		#contact-me {
+			top: 445%;
+		}
+}
+@media (min-width: 1025px) and (max-width: 1280px) 
+	and (min-height: 701px) and (max-height: 800px) {
+		#stack {
+			top: 390%;
+		}
+		#contact-me {
+			top: 415%;
+		}
+}
+@media (min-width: 1025px) and (max-width: 1280px) 
+	and (min-height: 801px) and (max-height: 900px) {
+		#stack {
+			top: 370%;
+		}
+		#contact-me {
+			top: 392.5%;
+		}
+}
+@media (min-width: 1025px) and (max-width: 1280px) 
+	and (min-height: 901px) and (max-height: 1000px) {
+		#stack {
+			top: 352.5%;
+		}
+		#contact-me {
+			top: 370%;
+		}
+}
+@media (min-width: 1025px) and (max-width: 1280px) 
+	and (min-height: 1001px) and (max-height: 1100px) {
+		#stack {
+			top: 345%;
+		}
+		#contact-me {
+			top: 362.5%;
+		}
+}
+@media (min-width: 1025px) and (max-width: 1280px) 
+	and (min-height: 1101px) and (max-height: 1200px) {
+		#stack {
+			top: 333.75%;
+		}
+		#contact-me {
+			top: 350%;
+		}
+}
+@media (min-width: 1025px) and (max-width: 1280px) 
+	and (min-height: 1201px) {
+		#stack {
+			top: 323.75%;
+		}
+		#contact-me {
+			top: 340%;
+		}
 }
