--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,11 @@
     margin: 0;
     padding: 0;
 }
+.grid-item.active {
+    background-color: rgba(0, 30, 0, 1.0);
+    transition: background-color 0.3s ease;
+    border-radius: 5px;
+}
 html, body {
     height: auto;
     margin: 10px;
