This updates the site so the contact links have their styles predefined in my script js and some in my css too

--- a/styles.css
+++ b/styles.css
@@ -485,6 +485,19 @@ li {
     border-color: transparent;
   }
 }
+p a {
+    color: inherit;               
+    text-decoration: none;        
+}
+
+p a:visited {
+    color: inherit;               
+}
+
+p a:hover {
+    color: rgba(0, 140, 0, 1.0);
+}
+
 mark {
     background: rgba(0, 95, 0, 0.55);
     color: white;
