--- a/styles.css
+++ b/styles.css
@@ -3,8 +3,16 @@
     scroll-behavior: smooth;
     padding: 0;
 }
-bg {
-    touch-action: auto;
+html, body {
+    height: auto;
+    margin: 10px;
+    overflow-y: scroll;
+    font-size: 16px;
+    max-width: 100vw;
+    overflow-x: hidden;
+}
+body::-webkit-scrollbar {
+    display: none;
 }
 canvas + div {
     overflow-y: auto;
@@ -17,15 +25,6 @@ canvas + div {
     background-color: rgba(0, 30, 0, 1.0);
     transition: background-color 0.3s ease;
     border-radius: 5px;
-}
-html, body {
-    height: auto;
-    margin: 10px;
-    overflow-y: scroll;
-    font-size: 16px;
-}
-body::-webkit-scrollbar {
-    display: none;
 }
 #bg {
     position: fixed;
